test: 나의 잔소리 목록이 비었을 경우 조회 테스트 추가